2007-12-10  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Disabled LUMIX FZ-20 (alternate ID),
	  since customer reports it only doing mass storage.

2007-12-10  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, music-players.h, device-flags.h:
	  New devices from libmtp project.
	  New device-flags.h from libmtp project.

2007-12-03  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Nikon DSC D300, Coolpix 7900.

2007-11-16  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Made metadata reading more intelligent, 
	  and fall back to lowlevel methods if necessary.

2007-11-14  Marcus Meissner  <marcus@jet.franken.de>

	* usb.c, ptp-bugs.h, library.c: Handle Creative Zen 8GB broken
	  header devices.

2007-11-12  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon A460, Nikon D40X.

2007-11-06  Linus Walleij  <triad@df.lth.se>

	* ptp.c: Do not print to stderr on not yet supported
	  OPFF types.

2007-10-31  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: also check for audio/x-wma and audio/x-wmv
	  mimetypes.

2007-10-27  Marcus Meissner  <marcus@jet.franken.de>

	* music-players.h, library.c, Makefile-files:
	  Split off music-players.h from libmtp to share
	  between us and libmtp.

2007-10-26  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c, config.c: Set GPContext consistently
	  in the Params struct, otherwise we might resuse
	  already free contexts.

2007-10-25  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp-bugs.h: The newer Nikons have the regular
	  capture events just fine, just the old ones suck a bit here.
	  Mark them broken for now.

2007-09-18  Linus Walleij  <triad@df.lth.se>

	* usb.c, library.c, ptp.c, ptp.h:
	  Split out cancel handling to shared code.

2007-09-13  Marcus Meissner  <marcus@jet.franken.de>

	* usb.c, library.c: Added cancellation support for read transfers.

2007-09-11  Marcus Meissner  <marcus@jet.franken.de>
